# nfr

./: CMakeLists.txt  README.md  local-nfrbuilder.sh  setup-docker-image.README
data/collectd/: collectd.conf  setup-collectd.readme
data/grafana/: start-grafana-docker.readme
data/grafana/etc/grafana/: grafana.ini
data/grafana/var/lib/grafana/: grafana.db
data/influxdb/: start-influxdb-docker.readme
data/influxdb/etc/influxdb/: influxdb.conf  run.sh
doc/: File-Restore-Model.ppt  mem_speed.txt  stat_fmt.txt  todo.list
scripts/: make.sh  redis-mgr.sh  setup-env.sh  start.sh  stop.sh
source/: Makefile  libpfring_Makefile.in  nfr.c  pfring_utils.c  setupenv.sh  tcpstat.c  valgrind.mem.leak.test
source/deprecated/: Makefile  r2p.c  redis.conf  v1_n2r.c  v2_n2r.c  v2_r2p.c  v3_n2r2p2s.c
source/test/: Makefile  lua_redis_test.sh  redis.lua  test_compile.c  test_curses.c  test_fifo.c  test_getopt.c  test_pfring_api.c  test_pfring_cluster.c  test_pipe_to_tcpflow.c  test_redis_perf.c  test_redis_pipeline.c  test_set_cpu_affinity.c  test_string_handling.c  test_write2influxdb.c
source/test/simple/: test_time.c
source/test/testbin/: getopt  set_cpu_affinity
